When container image credentials present, use only those
    This is done in order to make Jib not fail if there are invalid
    credentials in the docker config file

    Relates to: #10683